<?xml version="1.0"?>
<package format="2">
  <name>multi_topology_demo</name>
  <version>0.0.0</version>
  <description>The multi_topology_demo package</description>
  <maintainer email="james@todo.todo">james</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>behavior_manager</depend>
  <depend>behavior_pool</depend>

  <export></export>
</package>
